--- a/app/src/main/res/layout/fragment_personaje.xml
+++ b/app/src/main/res/layout/fragment_personaje.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".framework.personaje.PersonajeFragment">
+    tools:context=".framework.fragmentShowPersonaje.ShowPersonajeFragment">
 
     <ScrollView
         android:layout_width="match_parent"
