--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -28,7 +28,7 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-thin"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
@@ -58,69 +58,110 @@
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <ImageView
-            android:id="@+id/ivObjetos"
+            android:id="@+id/ivArmas"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="75dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.263"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.922"
-            app:srcCompat="@drawable/bandit"
+            app:layout_constraintVertical_bias="0.503"
+            app:srcCompat="@drawable/knight"
             tools:ignore="ContentDescription" />
 
-        <ImageView
-            android:id="@+id/ivInfo"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.273"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.532"
-            app:srcCompat="@drawable/spellbook"
-            tools:ignore="ContentDescription" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:paddingStart="10dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="10dp"
+            android:text="@string/armas"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/ivArmas"
+            app:layout_constraintStart_toStartOf="@+id/ivArmas"
+            app:layout_constraintTop_toBottomOf="@+id/ivArmas" />
 
         <ImageView
             android:id="@+id/ivArmaduras"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="75dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.273"
+            app:layout_constraintHorizontal_bias="0.739"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.725"
+            app:layout_constraintVertical_bias="0.503"
             app:srcCompat="@drawable/armor"
             tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:paddingStart="10dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="10dp"
+            android:text="@string/armaduras"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/ivArmaduras"
+            app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintStart_toStartOf="@+id/ivArmaduras"
+            app:layout_constraintTop_toBottomOf="@+id/ivArmaduras" />
 
         <ImageView
             android:id="@+id/ivEscudos"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="75dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.729"
+            app:layout_constraintHorizontal_bias="0.263"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.725"
+            app:layout_constraintVertical_bias="0.69"
             app:srcCompat="@drawable/shield"
             tools:ignore="ContentDescription" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:paddingStart="10dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="10dp"
+            android:text="@string/escudos"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/ivEscudos"
+            app:layout_constraintStart_toStartOf="@+id/ivEscudos"
+            app:layout_constraintTop_toBottomOf="@+id/ivEscudos" />
+
         <ImageView
-            android:id="@+id/ivArmas"
+            android:id="@+id/ivObjetos"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="75dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.729"
+            app:layout_constraintHorizontal_bias="0.739"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.532"
-            app:srcCompat="@drawable/knight"
+            app:layout_constraintVertical_bias="0.69"
+            app:srcCompat="@drawable/bandit"
             tools:ignore="ContentDescription" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:paddingStart="10dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="10dp"
+            android:text="@string/objetos"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/ivObjetos"
+            app:layout_constraintStart_toStartOf="@+id/ivObjetos"
+            app:layout_constraintTop_toBottomOf="@+id/ivObjetos" />
 
         <ProgressBar
             android:id="@+id/loading"
@@ -135,6 +176,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.3" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/ivInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="25dp"
+            android:backgroundTint="#2FB9EF"
+            android:contentDescription="@string/extended_fab_content_desc"
+            app:icon="@drawable/ic_baseline_edit_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
